--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,59 @@
-body {
-    padding: 0;
+* {
     margin: 0;
+    padding: 0;
 }
+
+body {
+    font-family: 'Ubuntu', sans-serif;
+}
+
+h1 {
+    font-size: 50px;
+    color: black;
+}
+
+/* Hero Section Start */
+.hero-banner {
+    background-image: url(../images/donation13.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 550px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.hero-content {
+    width: 50%;
+    text-align: center;
+}
+
+.hero-content h1 {
+    color: white;
+    font-weight: 900;
+}
+
+.hero-content p {
+    margin: 20px 0;
+    padding: 0 80px;
+    line-height: 25px;
+    color: white;
+    font-size: 16px;
+}
+
+.btn {
+    text-decoration: none;
+    font-size: 16px;
+    color: white;
+    background-color: #fb7979;
+    padding: 10px 20px;
+    border-radius: 5px;
+    display: inline-block;
+}
+
+.btn-cta {
+    margin-top: 10px;
+}
+
+/* Hero Section End */
