--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,10 @@ h1 {
     color: black;
 }
 
+p {
+    color: #777777;
+}
+
 section {
     margin-bottom: 100px;
 }
@@ -61,8 +65,6 @@ section {
 
 /* Hero Section End */
 /* Donate Item Section Start */
-.donate {}
-
 .container {
     width: 80%;
     margin: 0 auto;
@@ -78,7 +80,6 @@ section {
 .section-heading p {
     margin: 10px 0;
     line-height: 25px;
-    color: #474747;
 }
 
 .donate-amount {
@@ -94,7 +95,7 @@ section {
     padding: 30px 0;
     text-align: center;
     background-color: #fbf6f6;
-    color: #474747;
+    color: #828282;
 }
 
 .active {
@@ -127,3 +128,29 @@ section {
 }
 
 /* Donate Item Section End */
+.plan-item {
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.single-item {
+    width: 27%;
+    padding: 50px 20px;
+    border-radius: 5px;
+}
+
+.single-item:nth-child(1) {
+    background: #f2fbff;
+}
+
+.single-item:nth-child(2) {
+    background: #fff2f2;
+}
+
+.single-item:nth-child(3) {
+    background: #ffffcd;
+}
+
+.single-item h3 {
+    margin: 20px 0;
+}
